log/build_2023-11-29_09-06-29/mypkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ryokozuka/ros2_ws/install/mypkg/lib/python3.10/site-packages/mypkg/listener.py", line 11
    pub = node.create_subscription(Int 16, "countup", cb, 10)
                                   ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

